[package]
name = "monkey_rust"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "crates/lexer"
]

[[bin]]
name = "monkey"
path = "crates/cli/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
